--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,1 @@
-<div class="container" style="width:400px">
-  <div style="color: blue; margin-bottom: 20px">
-    <h1>{{title}}</h1>
-    <h3>{{description}}</h3>
-  </div>
-
-  <form-upload></form-upload>
-  <list-document></list-document>
-  <form-edit></form-edit>
-</div>
+<router-outlet></router-outlet>
