--- a/src/app/form-edit/form-edit.component.html
+++ b/src/app/form-edit/form-edit.component.html
@@ -1,5 +1,5 @@
 
-<h2>Edit document</h2>
+<h2>Редактирование документа</h2>
 
 <!-- Test this func -->
 <form [formGroup]="editForm" (ngSubmit)="onSubmit()">
