--- a/src/app/list-document/list-document.component.html
+++ b/src/app/list-document/list-document.component.html
@@ -56,8 +56,9 @@
         </tr>
       </thead>
       <tbody>
-        <tr *ngFor="let document of documents | search:searchString:typeSearch | orderBy:order:ascending">
-          <td><a href="/edit-document" (click)="editDocument(document)">{{document.fileName}}</a></td>
+        <tr *ngFor="let document of documents | search:searchString:typeSearch | orderBy:order:ascending | paginate: {
+        itemsPerPage: 5, currentPage: p}">
+          <td><a (click)="editDocument(document)" style="cursor: pointer; color: deepskyblue">{{document.fileName}}</a></td>
           <td>{{document.fileAuthor}}</td>
           <td class="text-center">{{document.ext}}</td>
           <td class="text-center">{{document.dateUploading}}</td>
@@ -66,12 +67,9 @@
       </tbody>
     </table>
 
-    <nav aria-label="Страницы документов">
-      <ul class="pagination justify-content-center">
-        <li class="page-item" *ngFor="let p of pages; let i = index">
-          <a class="page-link" href="#" (click)="setPage(i, $event)">{{i}}</a>
-        </li>
-      </ul>
-    </nav>
-
+  <div class="form-row text-center">
+    <div class="col-12">
+      <pagination-controls style="margin-right: auto" (pageChange)="p = $event"></pagination-controls>
+    </div>
+  </div>
 </div>
