--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,19 +1,18 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <a class="navbar-brand" href="#">DMS | DOCUMENT MANAGMENT SYSTEM</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
 
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
-        <a class="nav-link" (click)="goToMainPage()" style="cursor: pointer">Главная <span class="sr-only">(current)</span></a>
+        <a class="nav-link" [routerLink]="['']">Главная <span
+          class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" (click)="goToListDocument()" style="cursor: pointer">Список</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" (click)="goToAbout()" style="cursor: pointer">О системе</a>
+        <a class="nav-link" [routerLink]="['upload-document']">Загрузить</a>
       </li>
     </ul>
   </div>
@@ -30,7 +29,9 @@
 
 <footer class="footer font-small" style="background-color: #f8f9fa">
   <div class="container">
-    <div class="footer-copyright text-center py-3">2018 | created by <a target="_blank" href="https://github.com/bydirectx">bydirectx</a> | site:
+    <div class="footer-copyright text-center py-3">2018 | created by <a target="_blank"
+                                                                        href="https://github.com/bydirectx">bydirectx</a>
+      | site:
       <a href="https://bondarev.ml"> bondarev.ml</a>
     </div>
   </div>
